@@ -2,22 +2,94 @@ package com.anonymization.kafka.anonymizers.tuplebased;
 
 import com.anonymization.kafka.configs.stream.Parameter;
 import com.anonymization.kafka.configs.stream.ParameterType;
+import com.anonymization.kafka.validators.ConditionMapValidator;
 import com.anonymization.kafka.validators.KeyValidator;
 import com.anonymization.kafka.validators.ParameterExpectation;
-import com.anonymization.kafka.validators.PositiveIntegerValidator;
+import org.apache.kafka.connect.data.Field;
+import org.apache.kafka.connect.data.Schema;
+import org.apache.kafka.connect.data.SchemaBuilder;
 import org.apache.kafka.connect.data.Struct;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class ConditionalSubstitution implements TupleBasedAnonymizer {
 
     private List<String> keysToSubstitute = Collections.emptyList();
-    private HashMap<Object, Object> lookupTable = new HashMap<>();
+    private HashMap<String, Object> conditionMap = new HashMap<>();
+    private List<String> substitutionList = Collections.emptyList();
+    private final Logger log = LoggerFactory.getLogger(ConditionalSubstitution.class);
     @Override
     public List<Struct> anonymize(List<Struct> lineS) {
-        return lineS;
+        if (lineS.size() != 1) {
+            log.info("Tuple based anonymizer {} called with more than one line", getClass().getName());
+            return null;
+        }
+
+        Struct originalStruct = lineS.get(0);
+        SchemaBuilder schemaBuilder = SchemaBuilder.struct();
+
+        for (Field field : originalStruct.schema().fields()) {
+            if (keysToSubstitute.contains(field.name())) {
+                if (field.schema().equals(Schema.STRING_SCHEMA) || field.schema().equals(Schema.OPTIONAL_STRING_SCHEMA)) {
+                    schemaBuilder.field(field.name(), field.schema());
+                } else {
+                    schemaBuilder.field(field.name(), Schema.STRING_SCHEMA);
+                }
+            } else {
+                schemaBuilder.field(field.name(), field.schema());
+            }
+        }
+
+        Schema newSchema = schemaBuilder.build();
+        Struct newStruct = new Struct(newSchema);
+        Random random = new Random();
+
+        for (Field field : originalStruct.schema().fields()) {
+            if (keysToSubstitute.contains(field.name())) {
+                Object originalValue = originalStruct.get(field);
+                boolean replace = false;
+
+                if (conditionMap.containsKey("matchValue")) {
+                    if (originalValue.equals(conditionMap.get("matchValue"))) {
+                        replace = true;
+                    }
+                }
+
+                if (!replace && conditionMap.containsKey("matchRange")) {
+                    ArrayList<Number> matchRange = (ArrayList<Number>) conditionMap.get("matchRange");
+                    if (originalValue instanceof Number) {
+                        double originalNumber = ((Number) originalValue).doubleValue();
+                        if (originalNumber >= matchRange.get(0).doubleValue() &&
+                                originalNumber <= matchRange.get(1).doubleValue()) {
+                            replace = true;
+                        }
+                    }
+                }
+
+                if (!replace && conditionMap.containsKey("matchRegex")) {
+                    Pattern regex = Pattern.compile((String) conditionMap.get("matchRegex"));
+                    Matcher matcher = regex.matcher(originalValue.toString());
+                    if (matcher.matches()) {
+                        replace = true;
+                    }
+                }
+
+                if (replace) {
+                    int randomIndex = random.nextInt(substitutionList.size());
+                    newStruct.put(field.name(), substitutionList.get(randomIndex));
+                } else {
+                    newStruct.put(field.name(), originalValue.toString());
+                }
+            } else {
+                newStruct.put(field.name(), originalStruct.get(field));
+            }
+        }
+
+        return List.of(newStruct);
     }
 
     @Override
@@ -29,8 +101,13 @@ public class ConditionalSubstitution implements TupleBasedAnonymizer {
                         true
                 ),
                 new ParameterExpectation(
-                        "lookupTable",
-                        List.of(new PositiveIntegerValidator()),
+                        ParameterType.CONDITION_MAP.getName(),
+                        List.of(new ConditionMapValidator()),
+                        true
+                ),
+                new ParameterExpectation(
+                        ParameterType.SUBSTITUTION_LIST.getName(),
+                        Collections.emptyList(),
                         true
                 )
         );
@@ -41,7 +118,13 @@ public class ConditionalSubstitution implements TupleBasedAnonymizer {
         for (Parameter parameter : parameters) {
             switch (parameter.getType()) {
                 case KEYS:
-                    this.keysToSubstitute = (List<String>) parameter.getValue();
+                    this.keysToSubstitute = parameter.getKeys();
+                    break;
+                case CONDITION_MAP:
+                    this.conditionMap = parameter.getConditionMap();
+                    break;
+                case SUBSTITUTION_LIST:
+                    this.substitutionList = parameter.getSubstitutionList();
                     break;
             }
         }
